k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: nextjs-app
          image: ghcr.io/mahir-mohsin-sazim/test-ci-cd:latest
          ports:
            - containerPort: 3000
