k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app-service
spec:
  selector:
    app: nextjs-app
  ports:
    - protocol: TCP
      port: 80      
      targetPort: 3000  
  type: ClusterIP
